apps/subsystems/downloaders/sonarr/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: sonarr
  annotations:
    secret.reloader.stakater.com/reload: ${db_name:=downloaders-db}-${db_suffix_current:=default}-app
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: sonarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sonarr
    spec:
      automountServiceAccountToken: false
      containers:
      - name: sonarr
        image: ghcr.io/linuxserver/sonarr:4.0.20@sha256:f247545d23ba8b233d6604575347e48a623fe6ad75dda02348bf81917f3b5c06
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /ping
            port: 8989
        ports:
        - name: sonarr
          containerPort: 8989
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /ping
            port: 8989
        resources:
          requests:
            cpu: 15m
            memory: 298Mi
        securityContext:
          capabilities:
            add:
            - CHOWN
            - SETGID
            - SETUID
            drop:
            - ALL
        volumeMounts:
        - mountPath: /config
          name: sonarr-data
        - mountPath: /data
          name: sonarr-media
        - mountPath: /config/logs
          name: sonarr-logs
        - mountPath: /tmp
          name: sonarr-temp
      volumes:
      - name: sonarr-data
        persistentVolumeClaim:
          claimName: sonarr-data
      - name: sonarr-media
        persistentVolumeClaim:
          claimName: media
      - name: sonarr-logs
        emptyDir: {}
      - name: sonarr-temp
        emptyDir: {}
