apps/subsystems/downloaders/sonarr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: downloaders
  labels:
    app.kubernetes.io/name: sonarr
spec:
  selector:
    app.kubernetes.io/name: sonarr
  ports:
  - name: sonarr
    port: 8989
    targetPort: sonarr
    protocol: TCP
  type: ClusterIP
